--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -5,7 +5,6 @@
 }
 
 .card img {
-  max-width: 25em;
   max-height: 342px;
 }
 
@@ -13,6 +12,10 @@
   font-size: 1.25rem;
   display: flex;
   justify-content: space-between;
+}
+
+.card-title span {
+  position: relative;
 }
 
 .card-title span {
