header background, more portoflio projects

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -17,3 +17,13 @@ header h3 {
 header img {
   border-radius: 50%;
 }
+
+.header-desc {
+  font-size: 1.0rem;
+  color:whitesmoke;
+  background: rgba(0,0,0,.3);
+  position: absolute;
+  left: 1em;
+  top: 13em;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
