--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -27,10 +27,13 @@ header .profile {
 }
 header .networks {
   flex-direction: row;
+}
+header .networks span {
   position: relative;
 }
+
 header .networks img {
-  margin: 0 0.2em 0 0.2em;
+  margin: 0 0.5em 0 0.5em;
   height: 24px;
 }
 
