--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -5,7 +5,7 @@ header {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
-header div {
+header .wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,10 +38,13 @@ header .networks img {
 }
 
 .header-desc {
+  width: 100%;
   font-size: 1.0rem;
-  background: rgba(0,0,0,.3);
-  position: absolute;
-  left: 1em;
-  top: 13em;
+  margin-top: -25px;
+}
+
+.header-desc i {
+  margin-left: 3em;
+  background: rgba(0,0,0,.4);
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
