--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  font-family: Roboto,Helvetica,Arial,sans-serif
+  font-family: Roboto,Helvetica,Arial,sans-serif;
+  background-color: #FFFAF0;
 }
 
 .App {
