--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -2,6 +2,7 @@
   max-width: 32em;
   margin: 0 0 2em 0;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+  background: white;
 }
 
 .card img {
@@ -27,25 +28,8 @@
   min-height: 5em;
 }
 
-.ripple-effect{
-  position: absolute;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  background: white;
-
-
-  animation: ripple-animation 2s;
-}
-
-
-@keyframes ripple-animation {
-    from {
-      transform: scale(1);
-      opacity: 0.4;
-    }
-    to {
-      transform: scale(100);
-      opacity: 0;
-    }
+@media only screen and (max-width : 860px) {
+  .header-desc{
+    display: none;
+  }
 }
