--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -1,11 +1,10 @@
 .card {
-  max-width: 32em;
   margin: 0 0 2em 0;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
   background: white;
 }
 
-.card img {
+.card, .card img {
   max-width: 32em;
 }
 
@@ -28,8 +27,26 @@
   min-height: 5em;
 }
 
+.tech {
+  display: flex;
+  align-items: center;
+}
+
+.tech img {
+  max-width: 32px;
+}
+
 @media only screen and (max-width : 860px) {
+  .card, .card img {
+    max-width: 26em;
+  }
   .header-desc{
     display: none;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .card, .card img {
+    max-width: 18em;
   }
 }
