--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -29,11 +29,12 @@
 
 .tech {
   display: flex;
-  align-items: center;
+  justify-content: center;
 }
 
 .tech img {
-  max-width: 32px;
+  margin: 0 0.25em 1em 0.25em;
+  max-height: 32px;
 }
 
 @media only screen and (max-width : 860px) {
