--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,27 @@ body {
   justify-content: space-around;
   margin: 2em 0 2em 0;
 }
+
+.ripple{
+  overflow:hidden;
+}
+
+.ripple-effect{
+  position: absolute;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background: white;
+  animation: ripple-animation 1s;
+}
+
+@keyframes ripple-animation {
+    from {
+      transform: scale(0);
+      opacity: 0.4;
+    }
+    to {
+      transform: scale(2);
+      opacity: 0;
+    }
+}
