--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -10,6 +10,7 @@
 
 .card-title {
   font-size: 1.25rem;
+  margin-left: 0.5em;
   display: flex;
   justify-content: space-between;
 }
@@ -19,7 +20,7 @@
 }
 
 .card-desc {
-  padding: 0.5em 0.5em 0 0.5em;
+  padding: 0.5em 1em 0 1em;
   min-height: 5em;
 }
 
