update verbiage and add links to desc, fix header label to not go off on large screens

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -24,6 +24,10 @@
   min-height: 5em;
 }
 
+.card-desc a {
+  text-decoration: none;
+}
+
 .platforms {
   display: flex;
   justify-content: center;
