--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -42,9 +42,8 @@ header .networks img {
 }
 
 .header-desc {
-  position: absolute;
-  left: 0;
-  top: 13em;
+  margin-top: -25px;
+  margin-right: auto;
 }
 
 .header-desc i {
